--- a/src/SassComponent.scss
+++ b/src/SassComponent.scss
@@ -1,7 +1,11 @@
-@import './styles/utils.scss';
+@import 'utils.scss';
 
 .SassComponent {
   display: flex;
+  background: $oc-gray-2;
+  @include media('<768px') {    // 가로 크기가 768px 미만이 되면
+      background: $oc-gray-9;
+  }
   .box { // 일반 CSS에서는 .SassComponent .box와 마찬가지
     background: red; 
     cursor: pointer;
